--- a/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
+++ b/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray Crash Course - Ray Multiprocessing\n",
+    "# Ray Crash Course - Ray Parallel Iterators\n",
     "\n",
-    "This lesson explores how to replace three popular multiprocessing libraries with Ray replacements to break the one-machine boundary. \n",
+    "This lesson explores ... TODO\n",
     "\n",
     "> **Tip:** For more about Ray, see [ray.io](https://ray.io) or the [Ray documentation](https://docs.ray.io/en/latest/)."
    ]
@@ -17,8 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ray, time, sys, os\n",
-    "import numpy as np"
+    "import ray, time, sys, os"
    ]
   },
   {
@@ -46,47 +45,6 @@
    "outputs": [],
    "source": [
     "ray.init(address='auto', ignore_reinit_error=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Drop-in Replacements for Popular Single-node, Multiprocessing Libraries\n",
-    "\n",
-    "The Python community has three popular libraries for breaking out of Python's _global interpreter lock_ to enable better multiprocessing and concurrency. Ray now offers drop-in replacements for three of them, which allow apps using them to scale beyond a single-node boundary to a cluster.\n",
-    "\n",
-    "More details TBD:\n",
-    "\n",
-    "| Library | Library Docs | Ray Docs | Description |\n",
-    "| :------ | :----------- | :------- | :---------- |\n",
-    "| `asyncio` | | | |\n",
-    "| `joblib` | [joblib](https://joblib.readthedocs.io/en/latest/) | [Ray](https://docs.ray.io/en/latest/joblib.html) | Ray supports running distributed [scikit-learn](https://scikit-learn.org/stable/) programs by implementing a Ray backend for `joblib` using Ray Actors instead of local processes. This makes it easy to scale existing applications that use scikit-learn from a single node to a cluster. |\n",
-    "| `multiprocessing.Pool` | [Python](https://docs.python.org/3/library/multiprocessing.html#module-multiprocessing.pool) | [Ray](https://docs.ray.io/en/latest/multiprocessing.html) | Create a pool of processes for running work. The Ray replacement allows scaling to a cluster. |\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TBD: Examples of Each"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From this:\n",
-    "\n",
-    "```python\n",
-    "from multiprocessing.pool import Pool\n",
-    "```\n",
-    "\n",
-    "To this:\n",
-    "\n",
-    "```python\n",
-    "from ray.util.multiprocessing.pool import Pool\n",
-    "```"
    ]
   },
   {
