--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -135,8 +135,9 @@
     "\n",
     "Directory: `advanced-ray`\n",
     "\n",
-    "Go through the [_Crash Course_](#ray-crash-course) first if you are new to Ray. This tutorial provides more background information about Ray, such as why it was created and the problems it solves, and then dives into more advanced API usage, profiling and debugging applications, and how Ray works behind the scenes.\n",
+    "> **Note:** This is a draft tutorial, subject to significant change.\n",
     "\n",
+    "Go through the [_Crash Course_](#ray-crash-course) first if you are new to Ray. This tutorial provides a deeper dive into Ray tasks and actors, such as profiling and debugging applications. It also surveys the rest of the core API.\n",
     "\n",
     "| #  | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
