--- a/ray-crash-course/02-Ray-Crash-Course-Actors.ipynb
+++ b/ray-crash-course/02-Ray-Crash-Course-Actors.ipynb
@@ -2738,36 +2738,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "not ray: count_to =    10, num counters =    1, pause = 0.000: time =   0.00006 seconds\n",
-      "not ray: count_to =    10, num counters =    2, pause = 0.000: time =   0.00011 seconds\n",
+      "not ray: count_to =    10, num counters =    1, pause = 0.000: time =   0.00618 seconds\n",
+      "not ray: count_to =    10, num counters =    2, pause = 0.000: time =   0.00032 seconds\n",
       "not ray: count_to =    10, num counters =    3, pause = 0.000: time =   0.00003 seconds\n",
-      "not ray: count_to =    10, num counters =    4, pause = 0.000: time =   0.00004 seconds\n",
-      "not ray: count_to =    10, num counters =    1, pause = 0.100: time =   1.02147 seconds\n",
-      "not ray: count_to =    10, num counters =    2, pause = 0.100: time =   2.06663 seconds\n",
-      "not ray: count_to =    10, num counters =    3, pause = 0.100: time =   3.08734 seconds\n",
-      "not ray: count_to =    10, num counters =    4, pause = 0.100: time =   4.11860 seconds\n",
-      "not ray: count_to =    10, num counters =    1, pause = 0.200: time =   2.02211 seconds\n",
-      "not ray: count_to =    10, num counters =    2, pause = 0.200: time =   4.04329 seconds\n",
-      "not ray: count_to =    10, num counters =    3, pause = 0.200: time =   6.10084 seconds\n",
-      "not ray: count_to =    10, num counters =    4, pause = 0.200: time =   8.10807 seconds\n"
+      "not ray: count_to =    10, num counters =    4, pause = 0.000: time =   0.00091 seconds\n",
+      "not ray: count_to =    10, num counters =    1, pause = 0.100: time =   1.02699 seconds\n",
+      "not ray: count_to =    10, num counters =    2, pause = 0.100: time =   2.06604 seconds\n",
+      "not ray: count_to =    10, num counters =    3, pause = 0.100: time =   3.10144 seconds\n",
+      "not ray: count_to =    10, num counters =    4, pause = 0.100: time =   4.12026 seconds\n",
+      "not ray: count_to =    10, num counters =    1, pause = 0.200: time =   2.02300 seconds\n",
+      "not ray: count_to =    10, num counters =    2, pause = 0.200: time =   4.06021 seconds\n",
+      "not ray: count_to =    10, num counters =    3, pause = 0.200: time =   6.09391 seconds\n",
+      "not ray: count_to =    10, num counters =    4, pause = 0.200: time =   8.12467 seconds\n"
      ]
     }
    ],
    "source": [
     "count_to = 10\n",
     "for num_counters in [1, 2, 3, 4]:\n",
-    "    counter_trial(count_to, num_counters, pause*0.0)\n",
+    "    counter_trial(count_to, num_counters, 0.0)\n",
     "for num_counters in [1, 2, 3, 4]:\n",
-    "    counter_trial(count_to, num_counters, pause*0.01)\n",
+    "    counter_trial(count_to, num_counters, 0.1)\n",
     "for num_counters in [1, 2, 3, 4]:\n",
-    "    counter_trial(count_to, num_counters, pause*0.02)"
+    "    counter_trial(count_to, num_counters, 0.2)"
    ]
   },
   {
@@ -2806,11 +2806,11 @@
    "source": [
     "count_to = 10\n",
     "for num_counters in [1, 2, 3, 4]:\n",
-    "    ray_counter_trial(count_to, num_counters, pause*0.0)\n",
+    "    ray_counter_trial(count_to, num_counters, 0.0)\n",
     "for num_counters in [1, 2, 3, 4]:\n",
-    "    ray_counter_trial(count_to, num_counters, pause*0.01)\n",
+    "    ray_counter_trial(count_to, num_counters, 0.1)\n",
     "for num_counters in [1, 2, 3, 4]:\n",
-    "    ray_counter_trial(count_to, num_counters, pause*0.02)"
+    "    ray_counter_trial(count_to, num_counters, 0.2)"
    ]
   },
   {
