Completed the first five lessons for the Ray crash course

--- a/ray-crash-course/02-Ray-Crash-Course-Actors.ipynb
+++ b/ray-crash-course/02-Ray-Crash-Course-Actors.ipynb
@@ -2639,7 +2639,7 @@
    "source": [
     "## Exercise 1\n",
     "\n",
-    "Investigating Ray Actor performance."
+    "Let's investigat Ray Actor performance. Answers to the questions posed here are in the [solutions](solutions/Ray-Crash-Course-Solutions.ipynb) notebook."
    ]
   },
   {
@@ -3330,7 +3330,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\". Terminate all the processes started in this notebook."
+   ]
   }
  ],
  "metadata": {
