--- a/ray-crash-course/04-Ray-Multiprocessing.ipynb
+++ b/ray-crash-course/04-Ray-Multiprocessing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,37 +28,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Ray already running or successfully started\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!../tools/start-ray.sh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-05-22 08:24:49,725\tERROR worker.py:700 -- Calling ray.init() again after it has already been called.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ray.init(address='auto', ignore_reinit_error=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Ray Dashboard, if you are running this notebook on a local machine:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Dashboard URL: http://{ray.get_webui_url()}')"
    ]
   },
   {
@@ -102,17 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|20|21|22|23|24|25|26|27|28|29|30|31|32|33|34|35|36|37|38|39|40|41|42|43|44|45|46|47|48|49|50|51|52|53|54|55|56|57|58|59|60|61|62|63|64|65|66|67|68|69|70|71|72|73|74|75|76|77|78|79|80|81|82|83|84|85|86|87|88|89|90|91|92|93|94|95|96|97|98|99|"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ray.util.multiprocessing import Pool\n",
     "\n",
@@ -155,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,15 +195,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-05-22 08:28:48,808\tWARNING pool.py:340 -- The 'context' argument is not supported using ray. Please refer to the documentation for how to control ray initialization.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with joblib.parallel_backend('ray'):\n",
     "    search.fit(digits.data, digits.target)"
@@ -234,26 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2m\u001b[36m(pid=52447)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52447)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52447)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52447)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52447)\u001b[0m finished\n",
-      "\u001b[2m\u001b[36m(pid=52447)\u001b[0m finished\n",
-      "\u001b[2m\u001b[36m(pid=52447)\u001b[0m finished\n",
-      "\u001b[2m\u001b[36m(pid=52447)\u001b[0m finished\n",
-      "\u001b[2m\u001b[36m(pid=52447)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52447)\u001b[0m finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import asyncio\n",
     "\n",
@@ -286,20 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "@ray.remote\n",
     "def some_task():\n",
@@ -312,21 +267,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "({<Task finished coro=<_wrap_awaitable() done, defined at /Users/deanwampler/anaconda3/envs/anyscale-academy/lib/python3.7/asyncio/tasks.py:623> result=1>},\n",
-       " set())"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# asyncio alternative way:\n",
     "await some_task.remote()\n",
@@ -351,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,54 +317,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m started\n",
-      "CPU times: user 29.3 ms, sys: 13.1 ms, total: 42.3 ms\n",
-      "Wall time: 1.01 s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[None, None, None, None, None, None, None, None, None, None]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52454)\u001b[0m ended\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time ray.get([actor.run_task.remote() for _ in range(10)])"
    ]
@@ -441,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,54 +348,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m started\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m ended\n",
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m started\n",
-      "CPU times: user 109 ms, sys: 45.9 ms, total: 155 ms\n",
-      "Wall time: 4.03 s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[None, None, None, None, None, None, None, None, None, None]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2m\u001b[36m(pid=52440)\u001b[0m ended\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time ray.get([actor.run_task.remote() for _ in range(10)])"
    ]
@@ -507,7 +360,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\". Terminate all the processes started in this notebook."
+   ]
   }
  ],
  "metadata": {
