--- a/ray-crash-course/06-Running-Ray-Clusters.ipynb
+++ b/ray-crash-course/06-Running-Ray-Clusters.ipynb
@@ -21,7 +21,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!../tools/start-ray.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\". Terminate all the processes started in this notebook."
+   ]
   }
  ],
  "metadata": {
