--- a/ray-crash-course/solutions/Ray-Crash-Course-Solutions.ipynb
+++ b/ray-crash-course/solutions/Ray-Crash-Course-Solutions.ipynb
@@ -649,7 +649,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%time word_counts = count_words(['../*.ipynb'], top_n=100)  # The notebooks are now in the parent directory."
