--- a/reference/Troubleshooting-Tips-Tricks.ipynb
+++ b/reference/Troubleshooting-Tips-Tricks.ipynb
@@ -62,7 +62,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## General Task and Actor Tips\n",
+    "## Tips and Tricks\n",
+    "\n",
+    "### Jupyter Tips\n",
+    "\n",
+    "* **Learning Jupyter Lab:** Open _Help > JupyerLab Reference_ for a user guide and detailed information about Jupyter Lab. The _Help_ menu has other references, too.\n",
+    "* **Excessive Output:** If the output of a cell is very long, right click on it and select _Enable Scrolling for Outputs_."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### General Task and Actor Tips\n",
     "\n",
     "* To create a task from a function or an actor from a class, annotate it with `@ray.remote`.\n",
     "* Invoke tasks with `foo.remote(...)`\n",
@@ -78,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using Existing Functions and Classes\n",
+    "#### Using Existing Functions and Classes\n",
     "\n",
     "An existing function can be used as a task by defining a new task function that calls the original function. For example:\n",
     "\n",
@@ -125,9 +137,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using the Ray Dashboard\n",
+    "### Using the Ray Dashboard\n",
     "\n",
-    "### Opening the Dashboard\n",
+    "#### Opening the Dashboard\n",
     "\n",
     "As it executes, `ray.init` prints the dashboard URL.\n",
     "\n",
@@ -140,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Profiling Actors\n",
+    "#### Profiling Actors\n",
     "\n",
     "The _Logical View_ offers a powerful and convenient way to profile actor performance using [flame graphs](http://www.brendangregg.com/flamegraphs.html). Details are in the [Dashboard docs](https://ray.readthedocs.io/en/latest/ray-dashboard.html#ray-dashboard).\n",
     "\n",
@@ -183,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Profiling Code with ray.timeline()\n",
+    "### Profiling Code with ray.timeline()\n",
     "\n",
     "The other built-in way to profile performance uses `ray.timeline(file)` ([documentation](https://ray.readthedocs.io/en/latest/package-ref.html#ray.timeline)). It requires a Chrome web browser to view the data. This is the only way to profile tasks.\n",
     "\n",
@@ -203,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using Libraries\n",
+    "### Using Libraries\n",
     "\n",
     "If tasks or actors call (or subclass) library code in your project and that code isn't in a _subdirectory_ of the driver script, make sure that the process starting Ray has the correct `PYTHONPATH` set to the library location. For example,\n",
     "\n",
@@ -216,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cleaning Up\n",
+    "### Cleaning Up\n",
     "\n",
     "When your driver script exists, it will implicitly call `ray.shutdown()`. This can be useful to do explicitly if you want to restart Ray, for example, in a notebook environment. For example:\n",
     "\n",
