Nearly complete ray crash course lessons

--- a/ray-crash-course/00-Ray-Crash-Course-Overview.ipynb
+++ b/ray-crash-course/00-Ray-Crash-Course-Overview.ipynb
@@ -41,7 +41,7 @@
     "| 03 | [Why Ray?](03-Why-Ray.ipynb)                              | Now that you've seen Ray in action, take a step back and explore the origin and motivations for Ray, and the Ray growing ecosystem of libraries and tools.  |\n",
     "| 04 | [Ray Multiprocessing](04-Ray-Multiprocessing.ipynb)       | Ray drop-in replacements for common parallelism APIs and integration with `asyncio`. |\n",
     "| 05 | [Ray Parallel Iterators](05-Ray-Parallel-Iterators.ipynb) | A _parallel iterator_ API for simple data ingest and processing. It can be thought of as syntactic sugar around Ray actors and `ray.wait` loops. |\n",
-    "| 06 | [Running Ray Clusters](06-Running-Ray-Clusters.ipynb) | How to run Ray in a clustered environment, submit your work to it, and integrate with your local development process. |\n"
+    "| 06 | [Running Ray Clusters](06-Running-Ray-Clusters.ipynb)     | A brief look at the Ray CLI commands for running and stopping Ray clusters. |\n"
    ]
   },
   {
