--- a/advanced-ray/01-Ray-Tasks-Revisited.ipynb
+++ b/advanced-ray/01-Ray-Tasks-Revisited.ipynb
@@ -1285,16 +1285,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How Distributed Task Management Works\n",
+    "## How Distributed Task Management Works in Ray\n",
     "\n",
-    "> **Note:** If you just want to learn the Ray API, you can safely skip the rest of this lesson (notebook) for now. It continues the exploration of how Ray works internally, which we started in the previous lesson. However, you should come back to this material at some point, so you'll develop a better understanding of how Ray works."
+    "> **Note:** If you just want to learn the Ray API, you can safely skip the rest of this lesson (notebook) for now. It continues the exploration of how Ray works internally. However, you may wish to revisit this material at some point, so you'll develop a better understanding of how Ray works."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At the end of the last lesson, we examined Ray task scheduling at a high-level, by watching the Ray Dashboard and analyzing the performance times. Now we'll walk through some images that show the process Ray follows to place tasks around a cluster. "
+    "Consider the following architecture diagram for Ray:\n",
+    "\n",
+    "![Ray Architecture](../images/Ray-Architecture.j)"
    ]
   },
   {
