Refinement to slightly incorrect text

--- a/ray-crash-course/06-Running-Ray-Clusters.ipynb
+++ b/ray-crash-course/06-Running-Ray-Clusters.ipynb
@@ -3974,7 +3974,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If Ray is running on this node, the output can be very long. It shows the status of the nodes, running _raylet_ worker processes and various other Python processes being executed, and [Redis](https://redis.io/) processes, which are used as part of the distributed object store for Ray."
+    "If Ray is running on this node, the output can be very long. It shows the status of the nodes, running worker processes and various other Python processes being executed, and [Redis](https://redis.io/) processes, which are used as part of the distributed object store for Ray. We discuss these services in greater detail in the [Advance Ray tutorial](../advanced-ray/00-Advanced-Ray-Overview.ipynb)."
    ]
   },
   {
