Finished the Ray Internals draft

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -144,9 +144,10 @@
     "| #  | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
     "| 00 | [Overview](advanced-ray/00-Overview.ipynb) | A _table of contents_ for this tutorial. |\n",
-    "| 01 | [Ray Tasks Revisited](advanced-ray/01-Ray-Tasks-Revisited.ipynb) | More exploration of `ray.wait()` usage patterns, task dependencies and their management, task profiling techniques, and task scheduling. |\n",
-    "| 02 | [Ray Actors Revisited](advanced-ray/02-Ray-Actors-Revisited.ipynb) | A more in-depth look at Actor scheduling under the hood and profiling performance using the _Ray Dashboard_. |\n",
-    "| 03 | [Exploring Ray API Calls](advanced-ray/03-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. Options you can pass to the API calls already learned are explored. |\n",
+    "| 01 | [Ray Under the Hood](advanced-ray/01-Ray-Under-The-Hood.ipynb) | Explores the architecture of Ray, task scheduling, the Object Store, etc. |\n",
+    "| 02 | [Ray Tasks Revisited](advanced-ray/02-Ray-Tasks-Revisited.ipynb) | More exploration of `ray.wait()` usage patterns, task dependencies and their management, and task profiling techniques. |\n",
+    "| 03 | [Ray Actors Revisited](advanced-ray/03-Ray-Actors-Revisited.ipynb) | A more in-depth look at actor characteristis and profiling actor performance using the _Ray Dashboard_. |\n",
+    "| 04 | [Exploring Ray API Calls](advanced-ray/04-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. Options you can pass to the API calls already learned are explored. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](advanced-ray/solutions/Advanced-Ray-Solutions.ipynb)."
    ]
